@@ -1,3 +1,9 @@
+2012-08-13  Corinna Vinschen  <vinschen@redhat.com>
+
+	* libc/include/reent.h (stat64): Define as stat under Cygwin, instead
+	of as __stat64.  Undef stat64 if not building Newlib.
+	* libc/include/sys/stat.h (stat64): Define as stat under Cygwin.
+
 2012-08-10  Corinna Vinschen  <vinschen@redhat.com>
 
 	* libc/stdlib/btowc.c (btowc): Cast to avoid compiler warning.
